@@ -7,18 +7,18 @@
  pa_local_traditions_reaffirmed:0 "Local Tradition Reaffirmed"
  #Colony Rework
  pa_new_colony_cooldown:0 "Newly Established Colony"
- pa_new_colony_cooldown_desc:0 "This colony is still establishing itself and will reach maturity in 25 years. §YBuilding 3 Buildings§!, §YBuilding a Manufactory§!, §YExpanding Infrastructure§! in the colony, or §YDeveloping the Province 5 times§! will finish the colony and make it a full province. §YHaving more than§! §R10 Provinces with this modifier§! §Ywill incur increased costs for new colonies.§!"
+ pa_new_colony_cooldown_desc:0 "This colony is still establishing itself and will reach maturity in 25 years.A §BYear§! after establishing this colony,  §YBuilding 3 Buildings§!, §YBuilding a Manufactory§!, §YExpanding Infrastructure§! in the colony, or §YDeveloping the Province 5 times§! will finish the colony and make it a full province. §YHaving more than§! §R10 Provinces with this modifier§! §Ywill incur increased costs for new colonies.§!"
  pa_new_colonial_nation:0 "Newly Established Colonial Nation"
  pa_new_colonial_nation_colony:0 "New Established Colonial Nation Colony"
  pa_new_colonial_nation_colony_desc:0 "§RThis colony is costing the overlord 2 ducats per month!§!" 
- pa_new_colony_reduced_cost_1:0 "Reduced Colony Cost - §YExpansion Ideas§! "
+ pa_new_colony_reduced_cost_1:0 "Reduced Colony Cost - §GExpansion Ideas§! "
  pa_new_colony_reduced_cost_2:0 "Reduced Colony Cost"
- pa_new_colony_reduced_cost_3:0 "Reduced Colony Cost"
- pa_new_colony_increased_cost_1:0 "Increased Colony Cost - §Y10 Colonies§! "
- pa_new_colony_increased_cost_2:0 "Increased Colony Cost - §Y25 Colonies§! "
- pa_new_colony_increased_cost_3:0 "Increased Colony Cost - §Y30 Colonies§! "
- pa_new_colony_increased_cost_4:0 "Increased Colony Cost - §Y35 Colonies§! "
- pa_new_colony_increased_cost_native:0 "Increase Colony Cost - §YPrimitive Nation§! "
+ pa_new_colony_reduced_cost_3:0 "Reduced Colony Cost - §GColonial Expansions§!"
+ pa_new_colony_increased_cost_1:0 "Increased Colony Cost - §R10 Colonies§! "
+ pa_new_colony_increased_cost_2:0 "Increased Colony Cost - §R25 Colonies§! "
+ pa_new_colony_increased_cost_3:0 "Increased Colony Cost - §R30 Colonies§! "
+ pa_new_colony_increased_cost_4:0 "Increased Colony Cost - §R35 Colonies§! "
+ pa_new_colony_increased_cost_native:0 "Increase Colony Cost - §RPrimitive Nation§! "
  pa_new_colonial_nation_colony_overlord_upkeep:0 ""
  
  #US
