@@ -50,6 +50,7 @@ Pax Americana Update 1.3 - Mesoamerica
 # Colony Changes
 - Colonies will now instantly finish instead of becoming a colony.
 - The Colonized province will still receive unfinished colony modifier.
+- Unfinished colony modifier will now last for at least a year.
 - Exploration and Expansion Ideas have been reworked to be more generally useful & no longer colony-focused.
 - Expansion is based around general expansion
 - Exploration is now based around gaining and exploiting trade companies.
